<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of products -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/product_name"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/quantityTitle"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin"
            android:fontFamily="sans-serif"
            android:text="@string/quantity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:fontFamily="sans-serif"
            android:text="@string/priceTitle"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />


        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/price"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD" />
    </LinearLayout>

    <Button
        android:id="@+id/sale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/sale" />
</LinearLayout>